# labeler

./: .gitignore  README.md  pyproject.toml
resources/: resources.qrc
scripts/: build.sh  build_resources.py
src/dlii_labeler/: __init__.py  __main__.py  application.py  data_store.py  main_window.py  media_manager.py
src/dlii_labeler/activity/: __init__.py  object_detection_activity.py  object_segmentation_activity.py
src/dlii_labeler/export/: __init__.py  tngo_exporter.py  yolo_exporter.py
src/dlii_labeler/widget/: pane.py  pane_widget.py  scrubber.py  viewport_widget copy.py  viewport_widget.py  viewport_widget_old.py
